--- a/develop.html
+++ b/develop.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="VVV 0.1 documentation" href="index.html" />
+    <link rel="next" title="Ghetto, continuous integration server" href="ghetto.html" />
     <link rel="prev" title="Community" href="community.html" /> 
   </head>
   <body>
@@ -38,6 +39,9 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
+        <li class="right" >
+          <a href="ghetto.html" title="Ghetto, continuous integration server"
+             accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="community.html" title="Community"
              accesskey="P">previous</a> |</li>
@@ -66,6 +70,9 @@
   <h4>Previous topic</h4>
   <p class="topless"><a href="community.html"
                         title="previous chapter">Community</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="ghetto.html"
+                        title="next chapter">Ghetto, continuous integration server</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/develop.txt"
@@ -130,6 +137,7 @@ cd vvv
 virtualenv -p python3.2 venv
 source venv/bin/activate
 python setup.py develop
+
 # Set-up precommit hook to lint vvv&#x27;s own files
 vvv-install-git-pre-commit-hook</pre>
 </div>
@@ -248,6 +256,9 @@ vvv-install-git-pre-commit-hook</pre>
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
+        <li class="right" >
+          <a href="ghetto.html" title="Ghetto, continuous integration server"
+             >next</a> |</li>
         <li class="right" >
           <a href="community.html" title="Community"
              >previous</a> |</li>
