--- a/genindex.html
+++ b/genindex.html
@@ -72,9 +72,20 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#V"><strong>V</strong></a>
+ <a href="#G"><strong>G</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  
 </div>
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%" valign="top"><dl>
+      
+  <dt><a href="ghetto.html#module-ghettoci.main">ghettoci.main (module)</a>
+  </dt>
+
+  </dl></td>
+</tr></table>
+
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
