Updated gh-pages with new docs

--- a/installation.html
+++ b/installation.html
@@ -137,7 +137,7 @@ where VVV and all it dependencies are downloaded from <a class="reference extern
 <span class="go">wget &quot;https://raw.github.com/pypa/virtualenv/master/virtualenv.py&quot;</span>
 <span class="go">python3 virtualenv.py vvv-venv</span>
 <span class="go">source vvv-venv/bin/activate</span>
-<span class="go">pip install https://github.com/miohtama/vvv/tarball/master</span>
+<span class="go">pip install vvv</span>
 </pre></div>
 </div>
 <div class="admonition note">
@@ -159,8 +159,7 @@ When writing of this it was not the case.</p>
 <span class="go">cd ~</span>
 <span class="go">virtualenv-3.2 vvv-venv</span>
 <span class="go">source ~/vvv-venv/bin/activate</span>
-
-<span class="go">easy_install vvv</span>
+<span class="go">pip install vvv</span>
 </pre></div>
 </div>
 </div>
