Updated gh-pages with new docs

--- a/integration.html
+++ b/integration.html
@@ -397,7 +397,7 @@ Git repositories. Never commit bad code anymore!</p>
 [precommit-hooks]
 recipe = plone.recipe.command
 stop-on-error = true
-command = ${buildout:directory}/vvv-venv/bin/vvv-install-git-pre-commit-hook ${buildout:directory}/src/YOURREPO</pre>
+command = ${buildout:directory}/vvv-venv/bin/vvv-install-git-pre-commit-hook ${buildout:directory}/src/YOURREPO --silent</pre>
 </div>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
