Updated gh-pages with new docs

--- a/community.html
+++ b/community.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="VVV 0.1 documentation" href="index.html" />
     <link rel="next" title="Extend and develop" href="develop.html" />
-    <link rel="prev" title="Coding convention and guidelines" href="guidelines.html" /> 
+    <link rel="prev" title="Javascript globals added" href="tools/addjsglobals.html" /> 
   </head>
   <body>
     <div class="related">
@@ -43,7 +43,7 @@
           <a href="develop.html" title="Extend and develop"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="guidelines.html" title="Coding convention and guidelines"
+          <a href="tools/addjsglobals.html" title="Javascript globals added"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
       </ul>
@@ -60,8 +60,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="guidelines.html"
-                        title="previous chapter">Coding convention and guidelines</a></p>
+  <p class="topless"><a href="tools/addjsglobals.html"
+                        title="previous chapter">Javascript globals added</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="develop.html"
                         title="next chapter">Extend and develop</a></p>
@@ -134,7 +134,7 @@
           <a href="develop.html" title="Extend and develop"
              >next</a> |</li>
         <li class="right" >
-          <a href="guidelines.html" title="Coding convention and guidelines"
+          <a href="tools/addjsglobals.html" title="Javascript globals added"
              >previous</a> |</li>
         <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
       </ul>
