--- a/guidelines.html
+++ b/guidelines.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="VVV 0.1 documentation" href="index.html" />
-    <link rel="next" title="Community" href="community.html" />
+    <link rel="next" title="Tools" href="tools/index.html" />
     <link rel="prev" title="System prerequisites" href="prerequisites.html" /> 
   </head>
   <body>
@@ -40,7 +40,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="community.html" title="Community"
+          <a href="tools/index.html" title="Tools"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="prerequisites.html" title="System prerequisites"
@@ -68,8 +68,8 @@
   <p class="topless"><a href="prerequisites.html"
                         title="previous chapter">System prerequisites</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="community.html"
-                        title="next chapter">Community</a></p>
+  <p class="topless"><a href="tools/index.html"
+                        title="next chapter">Tools</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/guidelines.txt"
@@ -154,7 +154,7 @@ and guidelines for various programming languages and frameworks.</p>
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="community.html" title="Community"
+          <a href="tools/index.html" title="Tools"
              >next</a> |</li>
         <li class="right" >
           <a href="prerequisites.html" title="System prerequisites"
