--- a/installation.html
+++ b/installation.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="VVV 0.1 documentation" href="index.html" />
     <link rel="next" title="Configuration" href="configuration.html" />
-    <link rel="prev" title="Indices and tables" href="index.html" /> 
+    <link rel="prev" title="&lt;no title&gt;" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -43,7 +43,7 @@
           <a href="configuration.html" title="Configuration"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Indices and tables"
+          <a href="index.html" title="&lt;no title&gt;"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
       </ul>
@@ -68,7 +68,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="index.html"
-                        title="previous chapter">Indices and tables</a></p>
+                        title="previous chapter">&lt;no title&gt;</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="configuration.html"
                         title="next chapter">Configuration</a></p>
@@ -230,7 +230,7 @@ you can always recreate all downloaded files with the folllowing command:</p>
           <a href="configuration.html" title="Configuration"
              >next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Indices and tables"
+          <a href="index.html" title="&lt;no title&gt;"
              >previous</a> |</li>
         <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
       </ul>
