--- a/genindex.html
+++ b/genindex.html
@@ -80,7 +80,7 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
       
-  <dt><a href="ghetto.html#module-ghettoci.main">ghettoci.main (module)</a>
+  <dt><a href="tools/ghetto.html#module-ghettoci.main">ghettoci.main (module)</a>
   </dt>
 
   </dl></td>
