--- a/configuration.html
+++ b/configuration.html
@@ -192,7 +192,7 @@ pdb: |
 
 
 # Include all text files, ignore hard tab checking for Makefiles
-tabs:
+tabs: |
     *
     !Makefile
     !*.mk</pre>
