--- a/community.html
+++ b/community.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Community &mdash; VVV 0.1 documentation</title>
+    <title>Community &mdash; VVV trunk documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.1',
+        VERSION:     'trunk',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,9 +25,9 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="VVV 0.1 documentation" href="index.html" />
+    <link rel="top" title="VVV trunk documentation" href="index.html" />
     <link rel="next" title="Extend and develop" href="develop.html" />
-    <link rel="prev" title="Javascript globals added" href="tools/addjsglobals.html" /> 
+    <link rel="prev" title="Batch add Javascript global hints" href="tools/addjsglobals.html" /> 
   </head>
   <body>
     <div class="related">
@@ -43,9 +43,9 @@
           <a href="develop.html" title="Extend and develop"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="tools/addjsglobals.html" title="Javascript globals added"
+          <a href="tools/addjsglobals.html" title="Batch add Javascript global hints"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">VVV trunk documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -61,7 +61,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="tools/addjsglobals.html"
-                        title="previous chapter">Javascript globals added</a></p>
+                        title="previous chapter">Batch add Javascript global hints</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="develop.html"
                         title="next chapter">Extend and develop</a></p>
@@ -134,9 +134,9 @@
           <a href="develop.html" title="Extend and develop"
              >next</a> |</li>
         <li class="right" >
-          <a href="tools/addjsglobals.html" title="Javascript globals added"
+          <a href="tools/addjsglobals.html" title="Batch add Javascript global hints"
              >previous</a> |</li>
-        <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">VVV trunk documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
