--- a/develop.html
+++ b/develop.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Extend and develop &mdash; VVV 0.1 documentation</title>
+    <title>Extend and develop &mdash; VVV trunk documentation</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.1',
+        VERSION:     'trunk',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="VVV 0.1 documentation" href="index.html" />
+    <link rel="top" title="VVV trunk documentation" href="index.html" />
     <link rel="prev" title="Community" href="community.html" /> 
   </head>
   <body>
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="community.html" title="Community"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">VVV trunk documentation</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -259,7 +259,7 @@ vvv-install-git-pre-commit-hook</pre>
         <li class="right" >
           <a href="community.html" title="Community"
              >previous</a> |</li>
-        <li><a href="index.html">VVV 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">VVV trunk documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
