--- a/tools/addjsglobals.html
+++ b/tools/addjsglobals.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Batch add Javascript global hints &mdash; VVV 0.1 documentation</title>
+    <title>Batch add Javascript global hints &mdash; VVV trunk documentation</title>
     
     <link rel="stylesheet" href="../_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.1',
+        VERSION:     'trunk',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="VVV 0.1 documentation" href="../index.html" />
+    <link rel="top" title="VVV trunk documentation" href="../index.html" />
     <link rel="up" title="Tools" href="index.html" />
     <link rel="next" title="Community" href="../community.html" />
     <link rel="prev" title="Expand tabs" href="expandtabs.html" /> 
@@ -46,7 +46,7 @@
         <li class="right" >
           <a href="expandtabs.html" title="Expand tabs"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">VVV 0.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">VVV trunk documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Tools</a> &raquo;</li> 
       </ul>
     </div>
@@ -161,7 +161,7 @@ parse Javascript. It may break Javascript files if used</p>
         <li class="right" >
           <a href="expandtabs.html" title="Expand tabs"
              >previous</a> |</li>
-        <li><a href="../index.html">VVV 0.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">VVV trunk documentation</a> &raquo;</li>
           <li><a href="index.html" >Tools</a> &raquo;</li> 
       </ul>
     </div>
