--- a/tools/expandtabs.html
+++ b/tools/expandtabs.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Expand tabs &mdash; VVV 0.1 documentation</title>
+    <title>Expand tabs &mdash; VVV trunk documentation</title>
     
     <link rel="stylesheet" href="../_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.1',
+        VERSION:     'trunk',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,9 +25,9 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="VVV 0.1 documentation" href="../index.html" />
+    <link rel="top" title="VVV trunk documentation" href="../index.html" />
     <link rel="up" title="Tools" href="index.html" />
-    <link rel="next" title="Javascript globals added" href="addjsglobals.html" />
+    <link rel="next" title="Batch add Javascript global hints" href="addjsglobals.html" />
     <link rel="prev" title="Ghetto-CI, continuous integration script" href="ghetto.html" /> 
   </head>
   <body>
@@ -41,12 +41,12 @@
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="addjsglobals.html" title="Javascript globals added"
+          <a href="addjsglobals.html" title="Batch add Javascript global hints"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="ghetto.html" title="Ghetto-CI, continuous integration script"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">VVV 0.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">VVV trunk documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Tools</a> &raquo;</li> 
       </ul>
     </div>
@@ -66,7 +66,7 @@
                         title="previous chapter">Ghetto-CI, continuous integration script</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="addjsglobals.html"
-                        title="next chapter">Javascript globals added</a></p>
+                        title="next chapter">Batch add Javascript global hints</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/tools/expandtabs.txt"
@@ -143,12 +143,12 @@ find . -name &quot;*&quot; -type f -print | xargs file | grep ASCII | cut -d: -f
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="addjsglobals.html" title="Javascript globals added"
+          <a href="addjsglobals.html" title="Batch add Javascript global hints"
              >next</a> |</li>
         <li class="right" >
           <a href="ghetto.html" title="Ghetto-CI, continuous integration script"
              >previous</a> |</li>
-        <li><a href="../index.html">VVV 0.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">VVV trunk documentation</a> &raquo;</li>
           <li><a href="index.html" >Tools</a> &raquo;</li> 
       </ul>
     </div>
